force-app/main/default/objects/Lead/fields/Active_Status__c.field-meta.xml
<CustomField>
    <fullName>Active_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active (Status)</label>
    <type>Checkbox</type>
</CustomField>