force-app/main/default/objects/Lead/fields/Age_To_Latest_Update__c.field-meta.xml
<CustomField>
    <fullName>Age_To_Latest_Update__c</fullName>
    <formula>(
        5 * ( 
            FLOOR((TODAY() - DATE( 1900, 1, 8) ) / 7 )
        ) + MIN( 5, 
                MOD( TODAY() - DATE( 1900, 1, 8), 7 ) )
    ) - (
        5 * ( 
            FLOOR( ( IF(ISNULL(Recent_Status_Changed_Date__c), Lead_Accepted_Date__c, Recent_Status_Changed_Date__c) - DATE( 1900, 1, 8) ) / 7 ) 
        ) + MIN( 5,
                MOD(IF(ISNULL(Recent_Status_Changed_Date__c), Lead_Accepted_Date__c, Recent_Status_Changed_Date__c) - DATE( 1900, 1, 8), 7 ) 
               )
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age To  Latest Update</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>