force-app/main/default/objects/Lead/fields/Category_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Category_of_Interest__c</fullName>
    <label>Category of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oscilloscopes</fullName>
            </value>
            <value>
                <fullName>Acquisition de Données</fullName>
            </value>
            <value>
                <fullName>Analyseurs de Puissance Numériques</fullName>
            </value>
            <value>
                <fullName>Générateurs/Sources/Calibrateurs/Manomètres</fullName>
            </value>
            <value>
                <fullName>Instruments de Mesure Optique</fullName>
            </value>
            <value>
                <fullName>Instruments de Test Portables</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
            <value>
                <fullName>Data Acquisition</fullName>
            </value>
            <value>
                <fullName>Digital Power Analyzers</fullName>
            </value>
            <value>
                <fullName>Generators/Sources/Calibrators/Manometers</fullName>
            </value>
            <value>
                <fullName>Optical Measuring Instruments</fullName>
            </value>
            <value>
                <fullName>Portable Test Instruments</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Optical field testers</fullName>
                <isActive>false</isActive>
                <label>Optical field testers</label>
            </value>
            <value>
                <fullName>Optical spectrum analyzers</fullName>
                <isActive>false</isActive>
                <label>Optical spectrum analyzers</label>
            </value>
            <value>
                <fullName>Optical test equipment</fullName>
                <isActive>false</isActive>
                <label>Optical test equipment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>