force-app/main/default/objects/Lead/fields/Clone_Locked__c.field-meta.xml
<CustomField>
    <fullName>Clone_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Required to stop the automation to create duplicate records and avoid continuous loop.</description>
    <label>Clone Locked</label>
    <type>Checkbox</type>
</CustomField>