force-app/main/default/objects/Lead/fields/Company_Name_Local__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_Local__c</fullName>
    <label>Company Name (Local)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>