force-app/main/default/objects/Lead/fields/Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Company_Size__c</fullName>
    <description>Registrant provisioned text</description>
    <label>Company Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>