force-app/main/default/objects/Lead/fields/Conversion_Rejection_Date__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Rejection_Date__c</fullName>
    <label>Conversion/Rejection Date</label>
    <type>Date</type>
</CustomField>