force-app/main/default/objects/Lead/fields/D_B_DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>D_B_DUNS_Number__c</fullName>
    <label>D&amp;B DUNS Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>