force-app/main/default/objects/Lead/fields/Days_in_Sales_Queue__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Sales_Queue__c</fullName>
    <description>IF(
    ISNULL(Sales_Queue_Accepted_Date__c),
    TODAY() - Sales_Queue_Assigned_Date__c,
    Sales_Queue_Accepted_Date__c - Sales_Queue_Assigned_Date__c
)</description>
    <formula>(
    5 * (
        FLOOR(( IF(ISNULL(Sales_Queue_Accepted_Date__c),TODAY(), Sales_Queue_Accepted_Date__c) - DATE( 1900, 1, 7) ) / 7 )
    ) + MIN( 5,
            MOD( IF(ISNULL(Sales_Queue_Accepted_Date__c),TODAY(), Sales_Queue_Accepted_Date__c) - DATE( 1900, 1, 7), 7 ) )
) - (
    5 * (
        FLOOR( (Sales_Queue_Assigned_Date__c - DATE( 1900, 1, 7) ) / 7 )
    ) + MIN( 5,
            MOD(Sales_Queue_Assigned_Date__c - DATE( 1900, 1, 7), 7 )
           )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Sales Queue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>