force-app/main/default/objects/Lead/fields/Days_in_Tele_Queue__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Tele_Queue__c</fullName>
    <description>IF(
	ISNULL(Tele_Queue_Accepted_Date__c),
    TODAY() - Tele_Queue_Assigned_Date__c,
    Tele_Queue_Accepted_Date__c - Tele_Queue_Assigned_Date__c
)</description>
    <formula>(
    5 * (
        FLOOR(( IF(ISNULL(Tele_Queue_Accepted_Date__c),TODAY(), Tele_Queue_Accepted_Date__c) - DATE( 1900, 1, 7) ) / 7 )
    ) + MIN( 5,
            MOD( IF(ISNULL(Tele_Queue_Accepted_Date__c),TODAY(), Tele_Queue_Accepted_Date__c) - DATE( 1900, 1, 7), 7 ) )
) - (
    5 * (
        FLOOR( (Tele_Queue_Assigned_Date__c - DATE( 1900, 1, 7) ) / 7 )
    ) + MIN( 5,
            MOD(Tele_Queue_Assigned_Date__c - DATE( 1900, 1, 7), 7 )
           )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Tele-Queue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>