force-app/main/default/objects/Lead/fields/Days_to_1st_Update__c.field-meta.xml
<CustomField>
    <fullName>Days_to_1st_Update__c</fullName>
    <description>This field tracks business days

(5 * ( FLOOR( ( Today() - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Today() - DATE( 1900, 1, 8), 7 ) ) ) - (5 * ( FLOOR( ( DATEVALUE( Status_Changed_DateTime__c ) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD(DATEVALUE( Status_Changed_DateTime__c ) - DATE( 1900, 1, 8), 7 ) ) )</description>
    <formula>(
        5 * ( 
            FLOOR(( IF(ISNULL(Status_Changed_DateTime__c),TODAY(), DATEVALUE(Status_Changed_DateTime__c)) - DATE( 1900, 1, 7) ) / 7 )
        ) + MIN( 5, 
                MOD( IF(ISNULL(Status_Changed_DateTime__c),TODAY(), DATEVALUE(Status_Changed_DateTime__c)) - DATE( 1900, 1, 7), 7 ) )
    ) - (
        5 * ( 
            FLOOR( ( Lead_Accepted_Date__c - DATE( 1900, 1, 7) ) / 7 ) 
        ) + MIN( 5,
                MOD( Lead_Accepted_Date__c  - DATE( 1900, 1, 7), 7 ) 
               )
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>No. of business days took for inital update</inlineHelpText>
    <label>Days to 1st Update</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>