force-app/main/default/objects/Lead/fields/DNBoptimizer__DNB_D_U_N_S_Number__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__DNB_D_U_N_S_Number__c</fullName>
    <description>Upon successful match, Optimizer populates this field and references it for future refreshes. The Dun &amp; Bradstreet D-U-N-S® Number is an identification number assigned by Dun &amp; Bradstreet that uniquely identifies the entity in accordance with the Data Universal Numbering System (D-U-N-S).</description>
    <inlineHelpText>Upon successful match, Optimizer populates this field and references it for future refreshes. It is an identification number assigned by Dun &amp; Bradstreet that uniquely identifies the entity based on the Data Universal Numbering System (D-U-N-S).</inlineHelpText>
    <label>D&amp;B DUNS Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>