force-app/main/default/objects/Lead/fields/DNBoptimizer__DnBCompanyRecord__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__DnBCompanyRecord__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Upon a successful match, Optimizer populates this field that links the Lead record to a specific D-U-N-S Number for display of the correct custom object with D&amp;B data.</description>
    <inlineHelpText>Upon a successful match, Optimizer populates this field that links the Lead record to a specific D-U-N-S Number for display of the correct custom object with D&amp;B data.</inlineHelpText>
    <label>LeadToDnB</label>
    <referenceTo>DNBoptimizer__DnBCompanyRecord__c</referenceTo>
    <relationshipLabel>LeadToDnB</relationshipLabel>
    <relationshipName>LeadToDnB</relationshipName>
    <type>Lookup</type>
</CustomField>