force-app/main/default/objects/Lead/fields/Double_Opt_In_Source__c.field-meta.xml
<CustomField>
    <fullName>Double_Opt_In_Source__c</fullName>
    <description>Double Opt-In Source</description>
    <label>Double Opt-In Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>