force-app/main/default/objects/Lead/fields/Double_Opt_In_Status__c.field-meta.xml
<CustomField>
    <fullName>Double_Opt_In_Status__c</fullName>
    <label>Double Opt-In Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Decline</fullName>
            </value>
            <value>
                <fullName>Double Opt-In Email Sent</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
            <value>
                <fullName>True</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>