force-app/main/default/objects/Lead/fields/First_Name_Local__c.field-meta.xml
<CustomField>
    <fullName>First_Name_Local__c</fullName>
    <label>First Name (Local)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>