force-app/main/default/objects/Lead/fields/First_Update__c.field-meta.xml
<CustomField>
    <fullName>First_Update__c</fullName>
    <label>First Update</label>
    <type>Date</type>
</CustomField>