force-app/main/default/objects/Lead/fields/Forwarded_Lead__c.field-meta.xml
<CustomField>
    <fullName>Forwarded_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This sets to true when Channel Manager Emailed the Lead information to channel Reps.</description>
    <label>Forwarded Lead</label>
    <type>Checkbox</type>
</CustomField>