force-app/main/default/objects/Lead/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Industry</label>
    <referenceTo>Industry_Code__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>