force-app/main/default/objects/Lead/fields/Is_Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Is_Decision_Maker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Decision Maker</label>
    <type>Checkbox</type>
</CustomField>