force-app/main/default/objects/Lead/fields/Is_Tele_Qualified__c.field-meta.xml
<CustomField>
    <fullName>Is_Tele_Qualified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Tele-Qualified</label>
    <type>Checkbox</type>
</CustomField>