force-app/main/default/objects/Lead/fields/Kana_Name__c.field-meta.xml
<CustomField>
    <fullName>Kana_Name__c</fullName>
    <label>Kana Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>