force-app/main/default/objects/Lead/fields/Lead_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Accepted_Date__c</fullName>
    <label>Lead Accepted Date</label>
    <type>Date</type>
</CustomField>