force-app/main/default/objects/Lead/fields/Lead_Forwarded_To__c.field-meta.xml
<CustomField>
    <fullName>Lead_Forwarded_To__c</fullName>
    <description>Holds the recent email address that Lead was Forwarded To.</description>
    <label>Lead Forwarded To</label>
    <type>Email</type>
</CustomField>