force-app/main/default/objects/Lead/fields/Marketing_Suspended__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Suspended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Suspended</label>
    <type>Checkbox</type>
</CustomField>