force-app/main/default/objects/Lead/fields/Middle_Name_Local__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name_Local__c</fullName>
    <label>Middle Name (Local)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>