force-app/main/default/objects/Lead/fields/Multiple_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Inquiry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multiple Inquiry</label>
    <type>Checkbox</type>
</CustomField>