force-app/main/default/objects/Lead/fields/Partner_Reference__c.field-meta.xml
<CustomField>
    <fullName>Partner_Reference__c</fullName>
    <description>Variable campaign identifier</description>
    <label>Partner Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>