force-app/main/default/objects/Lead/fields/Product_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_of_Interest__c</fullName>
    <label>Product of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flow Meters</fullName>
            </value>
            <value>
                <fullName>Analyzers</fullName>
            </value>
            <value>
                <fullName>Pressure Transmitters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>