force-app/main/default/objects/Lead/fields/Recent_Status_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Recent_Status_Changed_Date__c</fullName>
    <label>Recent Status Changed Date</label>
    <type>Date</type>
</CustomField>