force-app/main/default/objects/Lead/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <description>Reason why Sales has rejected a Lead. Created as part of YODA Program.</description>
    <inlineHelpText>Reason why Sales has rejected a Lead</inlineHelpText>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incorrectly assigned</fullName>
            </value>
            <value>
                <fullName>Incomplete/Inaccurate</fullName>
            </value>
            <value>
                <fullName>No interest by sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>