force-app/main/default/objects/Lead/fields/Requested_Contact__c.field-meta.xml
<CustomField>
    <fullName>Requested_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If a prospect checks a box on the form that they want Yokogawa to contact them, the value should flow from Pardot to Sales cloud.</description>
    <label>Requested Contact</label>
    <type>Checkbox</type>
</CustomField>