force-app/main/default/objects/Lead/fields/Sales_Queue_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Queue_Assigned_Date__c</fullName>
    <label>Sales Queue Assigned Date</label>
    <type>Date</type>
</CustomField>