force-app/main/default/objects/Lead/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Stage of Lead</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto-qualified Lead (AQL)</fullName>
                <default>true</default>
                <label>Auto-qualified Lead (AQL)</label>
            </value>
            <value>
                <fullName>Tele-qualified Lead (TQL)</fullName>
            </value>
            <value>
                <fullName>TQL Rejected</fullName>
            </value>
            <value>
                <fullName>Marketing Qualified Lead (MQL)</fullName>
            </value>
            <value>
                <fullName>Sales Accepted Lead (SAL)</fullName>
            </value>
            <value>
                <fullName>Sales Rejected Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>