force-app/main/default/objects/Lead/fields/Status_Changed_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Status_Changed_DateTime__c</fullName>
    <label>Status Changed DateTime</label>
    <type>DateTime</type>
</CustomField>