force-app/main/default/objects/Lead/fields/std1__c.field-meta.xml
<CustomField>
    <fullName>std1__c</fullName>
    <description>Registrant provisioned text (Custom Field #1)</description>
    <label>std1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>