force-app/main/default/objects/Lead/fields/std6__c.field-meta.xml
<CustomField>
    <fullName>std6__c</fullName>
    <description>Registrant provisioned text (Custom Field #6)</description>
    <label>std6</label>
    <length>255</length>
    <type>Text</type>
</CustomField>