force-app/main/default/objects/Lead/fields/std8__c.field-meta.xml
<CustomField>
    <fullName>std8__c</fullName>
    <description>Registrant provisioned text (Custom Field #8)</description>
    <label>std8</label>
    <length>255</length>
    <type>Text</type>
</CustomField>