force-app/main/default/objects/Lead/fields/Sync_With_Pardot__c.field-meta.xml
<CustomField>
    <fullName>Sync_With_Pardot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls if the record can sync with Pardot. For Lead, it should be always unchecked.</description>
    <label>Sync With Pardot</label>
    <type>Checkbox</type>
</CustomField>