force-app/main/default/objects/Lead/fields/Tele_Qualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Tele_Qualified_Reason__c</fullName>
    <label>Tele-Qualified Reason</label>
    <type>TextArea</type>
</CustomField>