force-app/main/default/objects/Lead/fields/Tele_Queue_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Tele_Queue_Accepted_Date__c</fullName>
    <label>Tele-Queue Accepted Date</label>
    <type>Date</type>
</CustomField>