force-app/main/default/objects/Lead/fields/Total_Lead_Age__c.field-meta.xml
<CustomField>
    <fullName>Total_Lead_Age__c</fullName>
    <description>IF(
    ISNULL(Conversion_Rejection_Date__c),
    Today() -  DATEVALUE(CreatedDate),
    Conversion_Rejection_Date__c - DATEVALUE(CreatedDate)
)</description>
    <formula>(
        5 * ( 
            FLOOR(( IF(ISNULL(Conversion_Rejection_Date__c),TODAY(), Conversion_Rejection_Date__c) - DATE( 1900, 1, 7) ) / 7 )
        ) + MIN( 5, 
                MOD( IF(ISNULL(Conversion_Rejection_Date__c),TODAY(), Conversion_Rejection_Date__c) - DATE( 1900, 1, 7), 7 ) )
    ) - (
        5 * ( 
            FLOOR( ( DATEVALUE( CreatedDate ) - DATE( 1900, 1, 7) ) / 7 ) 
        ) + MIN( 5,
                MOD(DATEVALUE( CreatedDate ) - DATE( 1900, 1, 7), 7 ) 
               )
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Lead Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>