force-app/main/default/objects/Lead/validationRules/YODA_Lead_Conversion_Require_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>YODA_Lead_Conversion_Require_Opportunity</fullName>
    <active>true</active>
    <description>Opportunity checkbox that introduces the creation of the opportunity as optional to be removed.</description>
    <errorConditionFormula>AND(
 NOT( $Setup.Bypass_Settings__c.Bypass_Validation_Rules__c),
 IsConverted,
 ISBLANK(ConvertedOpportunityId)
)</errorConditionFormula>
    <errorMessage>You must create an Opportunity as part of the Lead conversion process.</errorMessage>
</ValidationRule>