force-app/main/default/objects/Lead/validationRules/YODA_Lead_Status_Backward_Control.validationRule-meta.xml
<ValidationRule>
    <fullName>YODA_Lead_Status_Backward_Control</fullName>
    <active>true</active>
    <errorConditionFormula>CASE(
TEXT(PRIORVALUE(Status)),
&apos;New&apos;, 1,
&apos;Contacting&apos;, 2,
&apos;Tele-Qualified&apos;, 3,
&apos;Qualified&apos;, 4,
&apos;Rejected&apos;, 5,0
) &gt;
CASE(
TEXT(Status),
&apos;New&apos;, 1,
&apos;Contacting&apos;, 2,
&apos;Tele-Qualified&apos;, 3,
&apos;Qualified&apos;, 4,
&apos;Rejected&apos;, 5,0
)</errorConditionFormula>
    <errorMessage>Lead Can not be marked backward status</errorMessage>
</ValidationRule>